# tauri-plugin-liquid-glass

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-example.yml  build.yml  fmt.yml  lint-rust.yml  publish-crate.yml  publish-npm.yml
examples/liquid-glass-app/: README.md  index.html  package.json  pnpm-lock.yaml
examples/liquid-glass-app/src/: App.css  App.tsx
examples/liquid-glass-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/liquid-glass-app/src-tauri/capabilities/: default.json
examples/liquid-glass-app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: is_glass_supported.toml  set_liquid_glass_effect.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs
src/glass_effect/: backend.rs  mod.rs  operations.rs  registry.rs  utils.rs
src/macos/: glass_effect.rs  mod.rs  utils.rs
