[package]
name = "tauri-plugin-liquid-glass"
version = "0.1.0"
edition = "2021"
description = "macOS 26+ Liquid Glass effect support for Tauri"
license = "MIT"
repository = "https://github.com/hkandala/tauri-plugin-liquid-glass"
keywords = ["tauri", "macos", "glass", "vibrancy", "liquid-glass"]
categories = ["gui", "os::macos-apis"]
rust-version = "1.77"
links = "tauri-plugin-liquid-glass"
exclude = ["/examples", "/dist", "/guest-js", "/node_modules"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }

[dependencies]
tauri = { version = "2.0", default-features = false }
tauri-plugin = { version = "2.0", features = ["runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
# Note: cocoa/objc are deprecated in favor of objc2 ecosystem, but objc2 requires
# significant architectural changes (MainThreadMarker, strict Send/Sync) that add
# complexity without functional benefit. These crates remain fully functional.
cocoa = "0.26"
objc = "0.2"
dispatch = "0.2"

[features]
default = []

# Suppress cfg warnings from older objc crate macros
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }
