[package]
name = "liquid-glass-app"
version = "0.1.0"
description = "Liquid Glass Example Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_boilerplate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Enable "macos-private-api" feature to allow transparent windows
# and access to private macOS APIs required for the liquid glass effect
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
# Add the liquid glass plugin dependency
# Use path for local development; for published apps use: tauri-plugin-liquid-glass = "0.1"
tauri-liquid-glass = { path = "../../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

